# sudoku

./: CMakeLists.txt  LICENSE  main.cpp
data/: CMakeLists.txt
data/board/: CMakeLists.txt  board.cpp
data/include/data/: consts.h
data/include/data/board/: annotation_board.h  board.h
data/include/data/mask/: hint.h  mask.h
data/mask/: CMakeLists.txt  hint.cpp  mask.cpp
src/: CMakeLists.txt  table.cpp  table.h
src/board/: CMakeLists.txt  board.cpp  board.h
src/checker/: CMakeLists.txt  checker.cpp  checker.h
src/generator/: CMakeLists.txt  full_board_generator.cpp  full_board_generator.h  generator_interface.h  mask_generator.cpp
src/genetic/: CMakeLists.txt  genetic.cpp
src/include/src/checker/: checker.h
src/include/src/generator/: full_board_generator.h  generator_interface.h  mask_generator.h
src/include/src/genetic/: genetic.h
src/include/src/solver/: force_brute_solver.h  human_solver.h  solvability.h  solver_interface.h
src/solver/: CMakeLists.txt  force_brute_solver.cpp  force_brute_solver.h  solver_interface.h
